# sws---Secret-Word-Selector

./: .gitignore  setup.cfg
