[metadata]
name = secret_word_selector
version = 1.0.0
author = Chris Sene
author_email = chris.sene@protonmail.com
description = Select the characters at specified indices of your secret word
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GPL 3
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6
scripts =
	bin/sws
install_requires =
	cryptography

[options.packages.find]
where = src

